Update support email to vivopetapp@gmail.com

--- a/support.html
+++ b/support.html
@@ -219,7 +219,7 @@
                     <div class="contact-icon">✉️</div>
                     <div>
                         <strong>Email Support</strong><br>
-                        <a href="mailto:support@vivopet.app">support@vivopet.app</a>
+                        <a href="mailto:vivopetapp@gmail.com">vivopetapp@gmail.com</a>
                     </div>
                 </div>
             </div>
@@ -257,7 +257,7 @@
             </div>
             
             <h2>🐛 Report a Bug</h2>
-            <p>Found something not working correctly? Please email us at <a href="mailto:support@vivopet.app">support@vivopet.app</a> with:</p>
+            <p>Found something not working correctly? Please email us at <a href="mailto:vivopetapp@gmail.com">vivopetapp@gmail.com</a> with:</p>
             <ul style="margin: 15px 0 0 20px; color: #4a5568;">
                 <li>A description of the issue</li>
                 <li>Steps to reproduce the problem</li>
